--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google-cloud/translate": "^6.0.2",
     "@k3rn31p4nic/google-translate-api": "^1.1.1",
     "@vitalets/google-translate-api": "^3.0.0",
-    "google-translate-api": "^2.3.0"
+    "google-translate-api": "^2.3.0",
+    "tunnel": "^0.0.6"
   }
 }
